--- a/_main/index.html
+++ b/_main/index.html
@@ -118,9 +118,9 @@
 			<div class='col-md-4 edges_vertical edges_horizontal text-left'>
 				<h4><strong>Personal information:</strong></h4>
 				<ul class="text-justify">
-					<li><div class='border_box'><strong>Name</strong> <span>Lorem ipsum</span></div></li>
-					<li><div class='border_box'><strong>Age</strong> <span>Lorem ipsum</span></div></li>
-					<li><div class='border_box'><strong>Skype</strong> <span>Lorem ipsum</span></div></li>
+					<li><div class='border_box'><strong>Name</strong> <span>Ing. Roman Varga</span></div></li>
+					<li><div class='border_box'><strong>Age</strong> <span>23</span></div></li>
+					<li><div class='border_box'><strong>Skype</strong> <span>0910 123 456</span></div></li>
 					<li><div class='border_box'><strong>Email</strong> <span><div class='secret_envelope'>rv</div></span></div></li>
 				</ul>
 			</div>
@@ -142,49 +142,56 @@
 				  <dt><img src= 'img/C.png' alt='C logo'/></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+					  <div id="progress-bar-language_C" class="progress-bar progress-bar-info progress-bar-language_C" data-progress="80%" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+					  80%
 					  </div>
 					</div>
 				  </dd>
 				  <dt><img src= 'img/sharp.png' alt='C# logo'/></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+					  <div id="progress-bar-language_Csharp" class="progress-bar progress-bar-info progress-bar-language_Csharp" data-progress="50%" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">
+					  50%
 					  </div>
 					</div>
 				  </dd>
 				   <dt><img src= 'img/html5-css3.png' alt='html_css logo' style='width:64px' /></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+					  <div id="progress-bar-language_HTML" class="progress-bar progress-bar-info progress-bar-language_HTML" data-progress="85%" role="progressbar" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">
+					  85%
 					  </div>
 					</div>
 				  </dd>
 				   <dt><img src= 'img/js.png' alt='JavaScript'/></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  <div id="progress-bar-language_JS" class="progress-bar progress-bar-info progress-bar-language_JS" data-progress="65%" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100">
+					  65%
 					  </div>
 					</div>
 				  </dd>
 				  <dt><img src= 'img/jquery.png' style="width:48px; padding-top:10px" alt='jquery logo'/></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+					  <div id="progress-bar-language_JQUERY" class="progress-bar progress-bar-info progress-bar-language_JQUERY" data-progress="50%" role="progressbar" aria-valuenow="10" aria-valuemin="0" aria-valuemax="100">
+					  50%
 					  </div>
 					</div>
 				  </dd>
 				  <dt><img src= 'img/angularjs.png' alt='AngularJS logo' /></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+					  <div id="progress-bar-language_ANGULAR" class="progress-bar progress-bar-info progress-bar-language_ANGULAR" data-progress="35%" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+					  35%
 					  </div>
 					</div>
 				  </dd>
 				  <dt><img src= 'img/php.png' alt='php logo'/></dt>
 				  <dd>
 					<div class="progress">
-					  <div class="progress-bar progress-bar-info progress-bar-language" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+					  <div id="progress-bar-language_PHP" class="progress-bar progress-bar-info progress-bar-language_PHP" data-progress="45%" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100">
+					  45%
 					  </div>
 					</div>
 				  </dd>
@@ -205,12 +212,12 @@
 			<div class='col-md-9 col-md-offset-3 edges_vertical text-center'>
 			
 				  <div class='row'>
-					<div class='col-md-3'>
-					  <h3><em>Lorem epsum</em></h3>
-					  <h4 class='objectFadeIn'>from - to</h4>
+					<div class='col-md-5'>
+					  <h3><em>Samsung Electronics Slovakia:</em></h3>
+					  <h4 class='objectFadeIn'>1.9.2012 - now</h4>
 					</div>
-					<div class='col-md-3 col-md-offset-3'>
-					  <h4 class='objectFadeIn'>----------A&B-----------</h4>
+					<div class='col-md-3 col-md-offset-1'>
+					  <h4 class='objectFadeIn role'>Engineer</h4>
 					</div>
 				  </div>
 				
@@ -225,10 +232,10 @@
 		</div>
 		<div class='row'>
 			<div class=' project_container col-md-5 col-md-offset-1 edges_vertical text-center'>
-				<div class="box"><div class='titleHoverOff'> <p>FoRPi</p><p>---------Lorem----------</p></div><div class='titleHoverIn'><p><a href=''><img src='img/logo_forpi.svg' alt='FoRPi project'><p>Forecast Raspberry Pi</p></a></p></div></div>
+				<div class="box"><div class='titleHoverOff'><a href=''><p>FoRPi</p><p>---------Lorem----------</p></a></div><div class='titleHoverIn'><p><img src='img/logo_forpi.svg' alt='FoRPi project'><p>Forecast Raspberry Pi</p></p></div></div>
 			</div>
 			<div class='project_container col-md-5  edges_vertical text-center'>
-				<div class="box"><div class='titleHoverOff'><p>Domoticz</p><p>Implementation Domoticz project on my own home place. Domoticz is a lightweight Home Automation System</p></div><div class='titleHoverIn'><p><a href='http://62.197.219.9:8080'><img src='img/domoticz.png' alt='Domoticz project'><p>Domoticz</p></a></p></div></div>
+				<div class="box"><div class='titleHoverOff'><a href='http://62.197.219.9:8080'><p>Domoticz</p><p>Implementation Domoticz project on my own home place. Domoticz is a lightweight Home Automation System</p></a></div><div class='titleHoverIn'><p><img src='img/domoticz.png' alt='Domoticz project'><p>Domoticz</p></p></div></div>
 			</div>
 			<div class='col-md-offset-1'></div>
 		</div>
@@ -251,35 +258,102 @@
 						<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
 						<li data-target="#myCarousel" data-slide-to="1"></li>
 						<li data-target="#myCarousel" data-slide-to="2"></li>
+						<li data-target="#myCarousel" data-slide-to="3"></li>
+						<li data-target="#myCarousel" data-slide-to="4"></li>
+						<li data-target="#myCarousel" data-slide-to="5"></li>
+						<li data-target="#myCarousel" data-slide-to="6"></li>
+						<li data-target="#myCarousel" data-slide-to="7"></li>
+						<li data-target="#myCarousel" data-slide-to="8"></li>
+						<li data-target="#myCarousel" data-slide-to="9"></li>
 					  </ol>
 					  <div class="carousel-inner" role="listbox">
 						<div class="item active">
-						  <img class="first-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="First slide">
+						  <img class="first-slide" src="img/gallery/1.jpg" alt="First slide">
 						  <div class="container">
 							<div class="carousel-caption">
-							  <h1>Example headline.</h1>
-							  <p>Note: If you're viewing this page via a <code>file://</code> URL, the "next" and "previous" Glyphicon buttons on the left and right might not load/display properly due to web browser security rules.</p>
-							  <p><a class="btn btn-lg btn-primary" href="#" role="button">Sign up today</a></p>
+							  <h1>Amsterdam</h1>
+							  <p></p>
 							</div>
 						  </div>
 						</div>
 						<div class="item">
-						  <img class="second-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Second slide">
+						  <img class="second-slide" src="img/gallery/2.jpg" alt="Second slide">
 						  <div class="container">
 							<div class="carousel-caption">
-							  <h1>Another example headline.</h1>
-							  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							  <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+							  <h1>Amsterdam</h1>
+							  <p></p>
 							</div>
 						  </div>
 						</div>
 						<div class="item">
-						  <img class="third-slide" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Third slide">
+						  <img class="third-slide" src="img/gallery/3.jpg" alt="Third slide">
 						  <div class="container">
 							<div class="carousel-caption">
-							  <h1>One more for good measure.</h1>
-							  <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-							  <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+							  <h1>Danish seasida</h1>
+							  <p></p>
+							</div>
+						  </div>
+						</div>
+						<div class="item">
+						  <img class="fourth-slide" src="img/gallery/4.jpg" alt="Fourth slide">
+						  <div class="container">
+							<div class="carousel-caption">
+							  <h1>Danish bridge</h1>
+							  <p></p>
+							</div>
+						  </div>
+						</div>
+						<div class="item">
+						  <img class="fifth-slide" src="img/gallery/5.jpg" alt="Fifth slide">
+						  <div class="container">
+							<div class="carousel-caption">
+							  <h1>Stockholm</h1>
+							  <p></p>
+							</div>
+						  </div>
+						</div>
+						<div class="item">
+						  <img class="sixth-slide" src="img/gallery/6.jpg" alt="Sixth slide">
+						  <div class="container">
+							<div class="carousel-caption">
+							  <h1>Stockholm</h1>
+							  <p></p>
+							</div>
+						  </div>
+						</div>
+						<div class="item">
+						  <img class="seventh-slide" src="img/gallery/7.jpg" alt="Seventh slide">
+						  <div class="container">
+							<div class="carousel-caption">
+							  <h1>Stockholm</h1>
+							  <p></p>
+							</div>
+						  </div>
+						</div>
+						<div class="item">
+						  <img class="eigth-slide" src="img/gallery/8.jpg" alt="Eigth slide">
+						  <div class="container">
+							<div class="carousel-caption">
+							  <h1>Sweden</h1>
+							  <p></p>
+							</div>
+						  </div>
+						</div>
+						<div class="item">
+						  <img class="nineth-slide" src="img/gallery/9.jpg" alt="Nineth slide">
+						  <div class="container">
+							<div class="carousel-caption">
+							  <h1>Sweden</h1>
+							  <p></p>
+							</div>
+						  </div>
+						</div>
+						<div class="item">
+						  <img class="tenth-slide" src="img/gallery/10.jpg" alt="Tenth slide">
+						  <div class="container">
+							<div class="carousel-caption">
+							  <h1>Riga</h1>
+							  <p></p>
 							</div>
 						  </div>
 						</div>
