--- a/_main/index.html
+++ b/_main/index.html
@@ -232,7 +232,7 @@
 		</div>
 		<div class='row'>
 			<div class=' project_container col-md-5 col-md-offset-1 edges_vertical text-center'>
-				<div class="box"><div class='titleHoverOff'><a href=''><p>FoRPi</p><p>---------Lorem----------</p></a></div><div class='titleHoverIn'><p><img src='img/logo_forpi.svg' alt='FoRPi project'><p>Forecast Raspberry Pi</p></p></div></div>
+				<div class="box"><div class='titleHoverOff'><a href='http://62.197.219.9/RPi/Forecast/'><p>FoRPi</p><p>Forecast Raspberry Pi project is focused on measure, collect and display meteo data. Dashboard is divided on to three sections. First deal with measured data(temperature, pressure, etc.) past days. Second and third section is focused on forecast data(external api)</p></a></div><div class='titleHoverIn'><p><img src='img/logo_forpi.svg' alt='FoRPi project'><p>Forecast Raspberry Pi</p></p></div></div>
 			</div>
 			<div class='project_container col-md-5  edges_vertical text-center'>
 				<div class="box"><div class='titleHoverOff'><a href='http://62.197.219.9:8080'><p>Domoticz</p><p>Implementation Domoticz project on my own home place. Domoticz is a lightweight Home Automation System</p></a></div><div class='titleHoverIn'><p><img src='img/domoticz.png' alt='Domoticz project'><p>Domoticz</p></p></div></div>
