--- a/_main/index.html
+++ b/_main/index.html
@@ -11,13 +11,13 @@
     <title>Personal site</title>
 
     <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="../css/bootstrap.min.css" rel="stylesheet">
     <!-- Bootstrap theme -->
-    <link href="css/bootstrap-theme.min.css" rel="stylesheet">
+    <link href="../css/bootstrap-theme.min.css" rel="stylesheet">
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <link href="css/ie10-viewport-bug-workaround.css" rel="stylesheet">
+    <link href="../css/ie10-viewport-bug-workaround.css" rel="stylesheet">
 	<!-- font awesome -->
-	<link href='css/font-awesome.min.css' rel='stylesheet'>
+	<link href='../css/font-awesome.min.css' rel='stylesheet'>
     <!-- Custom styles for this template -->
     <link href="css/main.css" rel="stylesheet">
 
@@ -540,13 +540,13 @@
 
     <!-- ____________________________________________Bootstrap core JavaScript____________________________________________ -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/jquery.min.js"></script>
+    <script src="../js/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/docs.min.js"></script>
+    <script src="../js/bootstrap.min.js"></script>
+    <script src="../js/docs.min.js"></script>
 	<script src="js/controller.js"></script>
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-    <script src="js/ie10-viewport-bug-workaround.js"></script>
+    <script src="../js/ie10-viewport-bug-workaround.js"></script>
 	<script  src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCSH1lUlN_vk6dSglskv12okRVr5J8XyDA&callback=initMap" async defer></script>
   </body>
 </html>
