--- a/_cv/index.html
+++ b/_cv/index.html
@@ -46,7 +46,7 @@
 						<div class="box"><div class='titleHoverOff'>FEI <p><img src='img/fei.png'><p></div><div class='titleHoverIn'><p>Faculty of Electrical Engineering and Information Technology, Bratislava<p>Specialization: Applied Informatics</p></p></div></div>
 					</div>
 					<div class="col-md-4 col-sm-4">
-						<div class="box"><div class='titleHoverOff'><p>SPS</p><img src='img/SPS.bmp'></div><div class='titleHoverIn'><span>Secondary School of Electrical Engineering, Šaľa<p>Specialization: Electrical</p></span></div></div>
+						<div class="box"><div class='titleHoverOff'><p>SPS</p><img src='img/SPS.jpg'></div><div class='titleHoverIn'><span>Secondary School of Electrical Engineering, Šaľa<p>Specialization: Electrical</p></span></div></div>
 					</div>
 					<div class="col-md-4 col-sm-4">
 						<div class="box"><div class='titleHoverOff'><p>Elementary school</p><img src='img/sala.jpg'></div><div class='titleHoverIn'><span><i class="fa fa-pencil-square-o fa-5x"></i><p>Šaľa</p></span></div></div>
