--- a/_main/index.html
+++ b/_main/index.html
@@ -115,7 +115,7 @@
 				<h4><strong>Personal information:</strong></h4>
 				<ul class="text-justify">
 					<li><div class='border_box'><strong>Name</strong> <span>Ing. Roman Varga</span></div></li>
-					<li><div class='border_box'><strong>Age</strong> <span>29</span></div></li>
+					<li><div class='border_box'><strong>Age</strong> <span> 29</span></div></li>
 					<li><div class='border_box'><strong>Skype</strong> <span>0910 579 485</span></div></li>
 					<li><div class='border_box'><strong>Email</strong> <span><div class='secret_envelope'>rv</div></span></div></li>
 				</ul>
@@ -133,7 +133,7 @@
 				<img src='img/ifograph_cv.png' alt='picture'/>
 			</div>
 			<div class='col-md-5 edges_vertical edges_horizontal text-left'>
-				<h4><strong>PC loremepsum</strong></h4>
+				<h4><strong>PC skills</strong></h4>
 				<dl class="dl-horizontal progress_bars">
 				  <dt><img src= 'img/C.png' alt='C logo'/></dt>
 				  <dd>
