add git shortcut

--- a/_cv/index.html
+++ b/_cv/index.html
@@ -33,7 +33,7 @@
 				<div class="row">
 					<div class="col-md-3 col-sm-4 col-md-offset-1 text-center"><img src="img/personal_front.jpg" id="pers_image" /></div>
 					<div class="col-md-3 col-sm-4 col-md-offset-1"><h3>Ing. Roman Varga<h3><p><h5><em>My name is Roman Varg and I was born in Galanta on May of 1987. I am sigle. These days I live in Bratislava, capital city of Slovakia. <em></h5></p></div>
-					<div class="col-md-3 col-sm-4 col-md-offset-1">Contact <ul><li><div class='row'><div class="circle"><i class="fa fa-envelope-o fa-1x"></i></div><div class=' verticalMenu secret_envelope'>rv</div></div></li><li><div class='row'><div class="circle"><i class="fa fa-mobile fa-1x"></div></i><div class='verticalMenu'>0910 123 456</div></div></li><li><div class='row'><div class="circle"><i class="fa fa-home fa-1x"></div></i> <div class='verticalMenu'>Bratislava</div></div></li></ul></div>
+					<div class="col-md-3 col-sm-4 col-md-offset-1">Contact <ul><li><div class='row'><div class="circle"><i class="fa fa-envelope-o fa-1x"></i></div><div class=' verticalMenu secret_envelope'>rv</div></div></li><li><div class='row'><div class="circle"><i class="fa fa-mobile fa-1x"></div></i><div class='verticalMenu'>0910 579 485</div></div></li><li><div class='row'><div class="circle"><i class="fa fa-home fa-1x"></div></i> <div class='verticalMenu'>Bratislava</div></div></li></ul></div>
 				</div>
 				<div class="row">
 				<div class="col-md-6 col-md-offset-3">Describe<p><em>I have engineer degree from Faculty of Electrical Engineering and Information Technology. I am non-conflict person, but when there is no other way, every-time I solve the problems with clear mind. I like to be part of society with open mind to new way of solutions<em></p></div>
@@ -78,7 +78,7 @@
 								<dt>Electrotechnics skills:</dt> <p>§23-Electrician for the management activities or operations management</p>
 							</dl>
 							<dl>
-								<dt>Network skills:</dt> <p> (CISCO)Intermediate</p>
+								<dt>Network skills:</dt> <p> (CISCO)Junior</p>
 							</dl>
 						</div>
 					
