--- a/_main/index.html
+++ b/_main/index.html
@@ -474,7 +474,7 @@
 		  <div class="col-md-4 col-lg-4 col-xs-4"><h4><strong>Where you can find me</strong></h4></div>
 		</div>
 		<div class="row footerCont">
-		  <div class="col-md-4 col-lg-4 col-xs-4"><ul><li><div class="icons"><i class="fa fa-envelope-o"> <span class='secret_envelope'>rv</span></i></div ></li><li><div class="icons"><i class="fa fa-github fa-lg"> <span>ice-wind rep.</span></i></div></li><li><div class="icons"><i class="fa fa-home"> Slovakia</i></div></li></ul></div>
+		  <div class="col-md-4 col-lg-4 col-xs-4"><ul><li><div class="icons"><i class="fa fa-envelope-o"> <span class='secret_envelope'>rv</span></i></div ></li><li><div class="icons"><a href="https://github.com/ice-wind"><i class="fa fa-github fa-lg"> <span>ice-wind rep.</span></i></a></div></li><li><div class="icons"><i class="fa fa-home"> Slovakia</i></div></li></ul></div>
 		  <div class="col-md-4 col-lg-4 col-xs-4"><ul><li class='FAQ' data-toggle="modal" data-target="#FAQ">1. FAQ </li><li class='share' data-toggle="modal" data-target="#share">2. Share </li><li class='licence' data-toggle="modal" data-target="#licence">3. Terms of use </li></ul></div>
 		  <div class="col-md-4 col-lg-4 col-xs-4"><div id="map"></div></div>
 		</div>
